<resources>
    <string name="app_name">Flying Bird</string>
    <string name="terms_condition"><![CDATA[Terms & Condition]]></string>
    <string name="contact_us">Contact Us</string>
    <string name="wishlist">Wishlist</string>
    <string name="sign_in">Sign In</string>
    <string name="home">Home</string>
    <string name="navigation_drawer_open">Navigation Drawer Open</string>
    <string name="navigation_drawer_close">Navigation Drawer Close</string>
    <string name="terms_and_condition"><![CDATA[I agree to the Privacy Policy and Terms & Conditions Of Flying Bird.]]></string>
</resources>